fix(meeting): lower call buttons on safari

--- a/spot-client/src/common/css/page-layouts/_in-call-view.scss
+++ b/spot-client/src/common/css/page-layouts/_in-call-view.scss
@@ -16,6 +16,7 @@
     }
 
     .in-call-nav {
+        align-items: center;
         align-content: center;
         display: flex;
         flex: 1;
